Feature: show executed graph as a separate graph (#26)
* feat: add attribute display type

* feat: add percentage meter element

* feat: add function to format percentage

* feat: add check for percentage

* feat: only show a percentage if the check passes

* feat: update percentage style

* fix: color contrast issue

* feat: update graph labels depending on execution or upload

* fix: resolve graph collection name not updating

* feat: apply suffix to graph name as well as collection name

* fix: apply only time and not date to execution format

* feat: merge graph collection loops into a single one

* feat: auto open split pane with new graph

* fix: remove auto open of split pane

* fix: remove duplicate method declaration

* chore: rebuild the project

* chore: rebuild the project

* chore: rebuild the project

* fix: remove deprecated config

* fix: keep overrides when updating graphs

* feat: keep track of updates sent to server

* feat: keep track of text and override separately

* chore: remove unused upload graph

* feat: add basic info for override

* feat: add icon to display if override was applied or not

* feat: update current override when the input valie changes

* feat: add icon and tooltip for override applied but not uploaded

* feat: update html to display override icon if it exists and was not uploaded

* feat: always display override icon

* feat: update override icon color based on it's status

* fix: hide icon if there is no override

* fix: typo

* fix: resolve vertical misalignment

* feat: add download and upload buttons

* feat: add file input for uploading overrides

* feat: expose current graph id

* feat: implement graph download

* feat: implement graph upload

* fix: add null checks for existing overrides

* feat: add badge for override icons

* feat: add styling to inputs

* chorE: remove unused import

* feat: update cpp button from hidden to disabled

* chore: remove unused graph upload

* chore: remove unused override command

* 

--- a/src/ui/src/components/visualizer/expandable_info_text.ng.html
+++ b/src/ui/src/components/visualizer/expandable_info_text.ng.html
@@ -85,7 +85,7 @@ limitations under the License.
           @if (hasCurModel() && editable?.input_type) {
             @switch (editable?.input_type) {
               @case ('value_list') {
-                <select>
+                <select (change)="handleTextChange($event)">
                   @for (option of getEditableOptions(editable!, displayText); track $index) {
                     <option [selected]="option === displayText">{{option}}</option>
                   }
