feat: add small description for optimization policies

--- a/src/ui/src/components/execution_settings_dialog/execution_settings_dialog.ng.html
+++ b/src/ui/src/components/execution_settings_dialog/execution_settings_dialog.ng.html
@@ -45,6 +45,17 @@ limitations under the License.
           }
         </select>
       </div>
+      <details>
+        <summary>Optimization Policies Description</summary>
+
+        <p>Below is a list of the optimization policies and what changes they do.</p>
+        <p>Please note not all optimization policies may be available at the time.</p>
+
+        <dl>
+          <dt>Optimizer disabled</dt>
+          <dd>This policy will disable any optimizations and ignore overrides.</dd>
+        </dl>
+      </details>
     }
 
     <div class="setting-item">
