--- a/src/ui/src/components/execution_settings_dialog/execution_settings_dialog.ng.html
+++ b/src/ui/src/components/execution_settings_dialog/execution_settings_dialog.ng.html
@@ -53,7 +53,9 @@ limitations under the License.
 
         <dl>
           <dt>Optimizer disabled</dt>
-          <dd>This policy will disable any optimizations and ignore overrides.</dd>
+          <dd>Disables any optimizations and ignore overrides.</dd>
+          <dt>DFShardingPolicy</dt>
+          <dd>Improve model performance by optimizing tensor memory layouts to maximize the usage of fast, L1 memory instead of DRAM.</dd>
         </dl>
       </details>
     }
