feat: show feedback when the api url is wrong

--- a/src/ui/src/components/home_page/home_page.ng.html
+++ b/src/ui/src/components/home_page/home_page.ng.html
@@ -72,6 +72,13 @@ limitations under the License.
       </div>
     }
 
+    <!-- Extension loading Error -->
+    @if (isExtensionLoadingError) {
+      <div class="welcome-card-container">
+        <api-error-card></api-error-card>
+      </div>
+    }
+
     <!-- Model source input -->
     @if (loadingExtensions()) {
       <div class="loading-adapter-extension-container">
