--- a/src/ui/src/components/logging_dialog/logging_dialog.scss
+++ b/src/ui/src/components/logging_dialog/logging_dialog.scss
@@ -89,6 +89,11 @@
   overflow: auto;
   overflow-anchor: auto;
 
+  ::highlight(search-results) {
+    background-color: Highlight;
+    color: HighlightText;
+  }
+
   ul {
     margin: 0;
     padding: 0;
