feat: update styles for selection and results highlights

--- a/src/ui/src/components/logging_dialog/logging_dialog.scss
+++ b/src/ui/src/components/logging_dialog/logging_dialog.scss
@@ -100,8 +100,13 @@
   overflow-anchor: auto;
 
   ::highlight(search-results) {
-    background-color: Highlight;
-    color: HighlightText;
+    background-color: yellow;
+    color: black;
+  }
+
+  ::selection {
+    background-color: dimgray;
+    color: white;
   }
 
   ul {
