feat: add extension service and check for execution to title bar

--- a/src/ui/src/components/visualizer/title_bar.ng.html
+++ b/src/ui/src/components/visualizer/title_bar.ng.html
@@ -32,11 +32,15 @@ limitations under the License.
     <div class="divider"></div>
 
     <graph-edit
-        [appService]="appService"
-        [nodeDataProviderExtensionService]="nodeDataProviderExtensionService"
+      [appService]="appService"
+      [nodeDataProviderExtensionService]="nodeDataProviderExtensionService"
+      [hidden]="!isExecutionEnabled"
     ></graph-edit>
 
-    <div class="divider"></div>
+    <div
+      class="divider"
+      [hidden]="!isExecutionEnabled"
+    ></div>
 
     <node-styler></node-styler>
 
