Feature: add log search and "raw" download (#64)
* fix: issue with package version mismatch

* feat: add search field

* feat: add raw download button

* feat: add separators to top bar

* feat: add basic search styles

* feat: add logs download functions

* feat: add search highlight

* feat: disable buttons if there are no logs

* feat: add missing form

* feat: add buttons for prev/next search results

* feat: update ranges to be a class propety instead of scoped to the log function

* feat: add functions to select next and previous ranges

* fix: always clear highlights

* fix: split stdout message into multiple strings with line breaks

* feat: add form styles

* feat: update styles for selection and results highlights

* feat: update log messages colors and styles

* fix: adjust selection colors and decoration

--- a/src/ui/src/components/logging_dialog/logging_dialog.ng.html
+++ b/src/ui/src/components/logging_dialog/logging_dialog.ng.html
@@ -18,17 +18,99 @@ limitations under the License.
 
 <div mat-dialog-title class="title-container">
   <h2>Message log</h2>
+
+  <search>
+    <form action="#" (submit)="searchLogs($event)">
+      <input
+        type="search"
+        [disabled]="!hasMessages"
+        aria-label="Search Logs"
+        #searchInput
+      />
+
+      <button
+        type="submit"
+        mat-icon-button
+        [disabled]="!hasMessages"
+        matTooltip="Search Logs"
+        aria-label="Search Logs"
+      >
+        <mat-icon>search</mat-icon>
+      </button>
+
+      <hr />
+
+      <button
+        type="button"
+        mat-icon-button
+        [disabled]="totalRanges === 0"
+        matTooltip="Previous Result"
+        aria-label="Previous Result"
+        (click)="selectPreviousResult()"
+      >
+        <mat-icon>arrow_upward</mat-icon>
+      </button>
+      <button
+        type="button"
+        mat-icon-button
+        [disabled]="totalRanges === 0"
+        matTooltip="Next Result"
+        aria-label="Next Result"
+        (click)="selectNextResult()"
+      >
+        <mat-icon>arrow_downward</mat-icon>
+      </button>
+      <span [attr.data-no-messages]="!hasMessages">
+        <output>{{currentRange + 1}}</output>
+        <span>/</span>
+        <output>{{totalRanges}}</output>
+      </span>
+    </form>
+  </search>
+
+  <hr />
+
   <div class="button-container">
-    <button mat-icon-button matTooltip="Download logs" (click)="downloadLogs()">
+    <button
+      mat-icon-button
+      [disabled]="!hasMessages"
+      class="composite-icon"
+      matTooltip="Download Raw Logs"
+      aria-label="Download Raw Logs"
+      (click)="downloadRawLogs()"
+    >
       <mat-icon>download</mat-icon>
+      <mat-icon>subject</mat-icon>
     </button>
-    <button mat-icon-button matTooltip="Clear logs" (click)="clearLogs()">
-      <mat-icon>delete</mat-icon>
+    <button
+      mat-icon-button
+      [disabled]="!hasMessages"
+      class="composite-icon"
+      matTooltip="Download JSON Logs"
+      aria-label="Download JSON Logs"
+      (click)="downloadJsonLogs()"
+    >
+      <mat-icon>download</mat-icon>
+      <mat-icon>data_object</mat-icon>
     </button>
   </div>
+
+  <hr />
+
+  <button
+    mat-icon-button
+    [disabled]="!hasMessages"
+    class="composite-icon"
+    matTooltip="Clear logs"
+    aria-label="Clear logs"
+    (click)="clearLogs()"
+  >
+    <mat-icon>delete</mat-icon>
+      <mat-icon>subject</mat-icon>
+  </button>
 </div>
 <div mat-dialog-content class="dialog-content">
-  <ul>
+  <ul #logList>
     @for (logMessage of messages; track $index) {
       <li [attr.data-log-level]="logMessage.level">
         <div class="log-message-header">
