Feature: enable/disable model execution (#65)
* feat: remove unused service

* feat: add type for extension options

* fix: update execution button to be disabled instead of hidden

* feat: add execution enabled option

* fix: reference to extension type

* fix: remove extension service from graph edit

* feat: add extension service and check for execution to title bar

* feat: cascade flag for enabling execution to extensions

* fix: move flag to enable execution from extension settings to extension itself

* fix: print extension metadata

* fix: add execution flag to json builtin extension

* fix: remove default from visualize from config

* fix: readd default

* chore: fix formatting

* chore: remove leftovers from testing

* fix: update rendering to skip element instead of hiding it

--- a/src/ui/src/components/visualizer/title_bar.ng.html
+++ b/src/ui/src/components/visualizer/title_bar.ng.html
@@ -31,12 +31,14 @@ limitations under the License.
 
     <div class="divider"></div>
 
-    <graph-edit
+    @if (isExecutionEnabled) {
+      <graph-edit
         [appService]="appService"
         [nodeDataProviderExtensionService]="nodeDataProviderExtensionService"
-    ></graph-edit>
+      ></graph-edit>
 
-    <div class="divider"></div>
+      <div class="divider"></div>
+    }
 
     <node-styler></node-styler>
 
