feat: update ul to be a list of strings

--- a/src/ui/src/components/graph_error_dialog/graph_error_dialog.scss
+++ b/src/ui/src/components/graph_error_dialog/graph_error_dialog.scss
@@ -27,6 +27,8 @@
 	font-weight: bold;
 }
 
-.error-dialog-items {
-	list-style: inside disc;
+.error-dialog-items pre {
+  text-wrap-mode: wrap;
+  white-space-collapse: break-spaces;
+  tab-size: 2;
 }
