--- a/src/ui/src/components/graph_error_dialog/graph_error_dialog.ng.html
+++ b/src/ui/src/components/graph_error_dialog/graph_error_dialog.ng.html
@@ -17,11 +17,11 @@ limitations under the License.
 -->
 
 <h2 mat-dialog-title class="error-dialog-title">{{data.title ?? 'Graph Errors'}}</h2>
-<ul mat-dialog-content class="error-dialog-items">
+<div mat-dialog-content class="error-dialog-items">
     @for (error of data.errorMessages; track $index) {
-      <li><code>{{error}}</code></li>
+      <pre>{{error}}</pre>
     }
-</ul>
+</div>
 <div mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Close</button>
 </div>
