--- a/src/ui/src/components/graph_error_dialog/graph_error_dialog.ng.html
+++ b/src/ui/src/components/graph_error_dialog/graph_error_dialog.ng.html
@@ -18,7 +18,7 @@ limitations under the License.
 
 <h2 mat-dialog-title class="error-dialog-title">{{data.title ?? 'Graph Errors'}}</h2>
 <div mat-dialog-content class="error-dialog-items" tabindex="0" cdkFocusInitial>
-  <pre [innerHTML]="renderErrorMessages()"></pre>
+  <pre>{{formattedErrorMessages}}</pre>
 </div>
 <div mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Close</button>
