Feature: Add error dialog to home (#68)
* feat: convert tooltip to button + dialog

* feat: update ul to be a list of strings

* feat: update error dialog data to accept a single string

* feat: add support for ansi colors

* feat: remove ansi code stripping from error messages

* fix: formatting

* chore: remove ansi package

* fix: update ansi processing to only strip ansi codes

--- a/src/ui/src/components/graph_error_dialog/graph_error_dialog.ng.html
+++ b/src/ui/src/components/graph_error_dialog/graph_error_dialog.ng.html
@@ -17,11 +17,9 @@ limitations under the License.
 -->
 
 <h2 mat-dialog-title class="error-dialog-title">{{data.title ?? 'Graph Errors'}}</h2>
-<ul mat-dialog-content class="error-dialog-items">
-    @for (error of data.errorMessages; track $index) {
-      <li><code>{{error}}</code></li>
-    }
-</ul>
+<div mat-dialog-content class="error-dialog-items" tabindex="0" cdkFocusInitial>
+  <pre>{{formattedErrorMessages}}</pre>
+</div>
 <div mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Close</button>
 </div>
