--- a/src/ui/src/components/visualizer/graph_edit.scss
+++ b/src/ui/src/components/visualizer/graph_edit.scss
@@ -4,6 +4,7 @@
   align-items: center;
   line-height: 14px;
   position: relative;
+  color: var(--me-on-surface-color);
 
   label {
     margin-inline-end: 1em;
